--- a/templates/Profilo/show.html.twig
+++ b/templates/Profilo/show.html.twig
@@ -41,9 +41,9 @@
        </tbody>
     </table>
 </div>
-
+<div class="pb-2 mb-4"></div>
 <a class="btn btn-primary" href="{{ path('app_scheda_pai_index') }}">Torna alla lista</a>
 <a class="btn btn-primary" href="{{ path('app_profilo_edit', {'id': user.id}) }}">Modifica dati personali</a>
-
+<div class="pb-2 mb-4"></div>
 {% endblock %}
 
