--- a/templates/campi_valutazione_figura_professionale.html.twig
+++ b/templates/campi_valutazione_figura_professionale.html.twig
@@ -1,6 +1,6 @@
 
 
-<div id="no-more-tables">
+<div id="visualizza-tables">
     <table class="col-sm-12  table-striped table-condensed cf">
         <thead class="cf">
         <tbody>
