--- a/templates/template_pdf.html.twig
+++ b/templates/template_pdf.html.twig
@@ -1,17 +1,37 @@
+<style>
+	table,
+	th,
+	td {
+		border: 1px solid;
+		opacity: 1;
+		width: 50%;
+	}
+	table {
+		width: 100%;
+		border-collapse: collapse;
+	}
+	th {
+		text-align: center;
+	}
+	tr:nth-child(even) {background-color: #f2f2f2;}
+</style>
 {% block body %}
-	<h1 style= "text-align: center; "> Scheda di valutazione completa</h1>
-	
-	<h3 style= "text-align: center; ">Scheda PAI</h3>
+	<h1 style="text-align: center; ">
+		Scheda di valutazione completa</h1>
+
+	<h3 style="text-align: center; ">Scheda PAI</h3>
+
 	{{ include('campi_scheda_pai.html.twig') }}
-	
-	<h3 style= "text-align: center; ">Valutazione Generale</h3>
+
+
+	<h3 style="text-align: center; ">Valutazione Generale</h3>
 	{% if valutazione_generale is empty %}
 		<h4>Nessuna scheda di valutazione generale</h4>
 	{% else %}
 		{{ include('campi_valutazione_generale.html.twig') }}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">Valutazione Figura Professionale</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Valutazione Figura Professionale</h3>
 	{% if valutazioni_figura_professionale is empty %}
 		<h4>Nessuna scheda di valutazione professionale</h4>
 	{% else %}
@@ -20,8 +40,8 @@
 			{{ include('campi_valutazione_figura_professionale.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>	
-	<h3 style= "text-align: center; ">Barthel</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Barthel</h3>
 	{% if barthels is empty %}
 		<h4>Nessuna scheda di valutazione barthel</h4>
 	{% else %}
@@ -29,8 +49,8 @@
 			{{ include('campi_barthel.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">Braden</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Braden</h3>
 	{% if bradens is empty %}
 		<h4>Nessuna scheda di valutazione braden</h4>
 	{% else %}
@@ -38,8 +58,8 @@
 			{{ include('campi_braden.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">SPMSQ</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">SPMSQ</h3>
 	{% if spmsqs is empty %}
 		<h4>Nessuna scheda di valutazione spmsq</h4>
 	{% else %}
@@ -47,8 +67,8 @@
 			{{ include('campi_spmsq.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">Tinetti</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Tinetti</h3>
 	{% if tinettis is empty %}
 		<h4>Nessuna scheda di valutazione tinetti</h4>
 	{% else %}
@@ -56,8 +76,8 @@
 			{{ include('campi_tinetti.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">Vas</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Vas</h3>
 	{% if vass is empty %}
 		<h4>Nessuna scheda di valutazione vas</h4>
 	{% else %}
@@ -65,8 +85,8 @@
 			{{ include('campi_vas.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">Lesioni</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Lesioni</h3>
 	{% if lesionis is empty %}
 		<h4>Nessuna scheda di valutazione lesioni</h4>
 	{% else %}
@@ -74,18 +94,18 @@
 			{{ include('campi_lesioni.html.twig') }}
 		{% endfor %}
 	{% endif %}
-	<div style= "page-break-before: always;"></div>
-	<h3 style= "text-align: center; ">Parere MMG</h3>
+	<div style="page-break-before: always;"></div>
+	<h3 style="text-align: center; ">Parere MMG</h3>
 	{% if parere_mmg is empty %}
 		<h4>Nessun parere mmg</h4>
 	{% else %}
 		{{ include('campi_parere_mmg.html.twig') }}
 	{% endif %}
-	<h3 style= "text-align: center; ">Chiusura Servizio</h3>
+	<h3 style="text-align: center; ">Chiusura Servizio</h3>
 	{% if chiusura_servizio is empty %}
 		<h4>Nessuna chiusura servizio</h4>
 	{% else %}
 		{{ include('campi_chiusura_servizio.html.twig') }}
 	{% endif %}
-	
+
 {% endblock %}
