--- a/templates/Profilo/edit.html.twig
+++ b/templates/Profilo/edit.html.twig
@@ -6,5 +6,7 @@
     <h1>Modifica Profilo</h1>
 
     {{ include('Profilo/_form.html.twig', {'button_label': 'Salva'}) }}
+    <div class="pb-2 mb-4"></div>
    <a class="btn btn-danger" href="{{ path('app_profilo_show') }}">Annulla</a>
+   <div class="pb-2 mb-4"></div>
 {% endblock %}
