--- a/templates/campi_chiusura_servizio.html.twig
+++ b/templates/campi_chiusura_servizio.html.twig
@@ -1,4 +1,4 @@
-<div id="no-more-tables">
+<div id="visualizza-tables">
     <table class="col-sm-12  table-striped table-condensed cf">
         <thead class="cf">
         <tbody>
