--- a/templates/campi_scheda_pai.html.twig
+++ b/templates/campi_scheda_pai.html.twig
@@ -1,4 +1,5 @@
-<div id="no-more-tables">
+
+<div id="visualizza-tables">
 	<table class="col-sm-12  table-striped table-condensed cf">
 		<thead class="cf"></thead>
 		<tbody>
