--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -12,16 +12,15 @@ label.required:after {
     content: " *";
     color: red;
 }
-
 @media only screen and (max-width: 1200px) {
 
     /* Force table to not be like tables anymore */
-    #no-more-tables table,
-    #no-more-tables thead,
-    #no-more-tables tbody,
-    #no-more-tables th,
-    #no-more-tables td,
-    #no-more-tables tr,
+    .no-more-tables table,
+    .no-more-tables thead,
+    .no-more-tables tbody,
+    .no-more-tables th,
+    .no-more-tables td,
+    .no-more-tables tr,
     #visualizza-tables table,
     #visualizza-tables thead,
     #visualizza-tables tbody,
@@ -32,17 +31,17 @@ label.required:after {
     }
 
     /* Hide table headers (but not display: none;, for accessibility) */
-    #no-more-tables thead tr {
+    .no-more-tables thead tr {
         position: absolute;
         top: -9999px;
         left: -9999px;
     }
 
-    #no-more-tables tr {
+    .no-more-tables tr {
         border: 1px solid #ccc;
     }
 
-    #no-more-tables td {
+    .no-more-tables td {
         /* Behave like a "row" */
         border: none;
         border-bottom: 1px solid #eee;
@@ -52,7 +51,7 @@ label.required:after {
         text-align: left;
     }
 
-    #no-more-tables td:before {
+    .no-more-tables td:before {
         /* Now like a table header */
         position: absolute;
         /* Top/left values mimic padding */
@@ -101,24 +100,25 @@ label.required:after {
     /*
     Label the data
     */
-    #no-more-tables td:before {
+    .no-more-tables td:before {
         content: attr(data-title);
     }
 }
+body #scheda_pai table tr td {
 
 
-.text-orange {
+&.text-orange {
     color: $orange;
 }
 
-.text-purple {
+&.text-purple {
     color: $purple;
 }
 
-.text-pink {
+&.text-pink {
     color: $pink;
 }
-
+}
 #visualizza-tables {
 
     td,
@@ -126,4 +126,7 @@ label.required:after {
         border: 1px solid;
         width: 50%;
     }
+}
+.hiddenRow {
+    padding: 0 !important;
 }
