--- a/templates/Profilo/show.html.twig
+++ b/templates/Profilo/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Profilo Utente</h1>
 
-<div id="no-more-tables">
+<div class="no-more-tables">
     <table class="col-sm-12  table-striped table-condensed cf">
         <thead class="cf">
         <tbody>
