--- a/templates/vas/index.html.twig
+++ b/templates/vas/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Vas</h1>
  
- <div id="no-more-tables">
+ <div class="no-more-tables">
     <table class="col-sm-12  table-striped table-condensed cf">
         <thead class="cf">
             <tr>
