--- a/templates/campi_scheda_pai.html.twig
+++ b/templates/campi_scheda_pai.html.twig
@@ -89,7 +89,13 @@
 			</tr>
 			<tr>
 				<th>Assistito</th>
-				<td>{{ scheda_pai.idAssistito }}</td>
+				<td> 
+                 {% if assistito.id == scheda_pai.idAssistito %}
+                    {{ assistito.nome }}
+                    {{ assistito.cognome }}
+                    <br>
+                 {% endif %}
+				</td>
 			</tr>
 		</tbody>
 	</tbody>
