--- a/templates/scheda_pai_completa.html.twig
+++ b/templates/scheda_pai_completa.html.twig
@@ -18,6 +18,11 @@
 	{{ include('campi_scheda_pai.html.twig') }}
 	<div class="pb-2 mb-4"></div>
 	<div class="h3 pb-2 mb-4 text-dark border-bottom border-dark">
+		Anagrafica Assistito
+	</div>
+	{{ include('dati_assistito.html.twig') }}
+	<div class="pb-2 mb-4"></div>
+	<div class="h3 pb-2 mb-4 text-dark border-bottom border-dark">
 		Valutazione Generale
 	</div>
 	{% if valutazione_generale is empty %}
