--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -83,7 +83,15 @@
                         <br>
                     {% endif %}
                 </td>
-                <td data-title='Assistito'>{{ scheda_pai.idAssistito }}</td>
+                <td data-title='Assistito'>
+                {% for i in assistiti %}
+                 {% if i.id == scheda_pai.idAssistito %}
+                    {{ i.nome }}
+                    {{ i.cognome }}
+                    <br>
+                 {% endif %}
+                {% endfor %}
+                </td>
                 <td data-title='Stato' class ="{% if scheda_pai.currentPlace == 'approvata' %} text-pink {% elseif scheda_pai.currentPlace == 'attiva' %} text-success {% elseif scheda_pai.currentPlace == 'nuova' %} text-purple {% elseif scheda_pai.currentPlace == 'in_attesa_di_chiusura' %} text-warning {% elseif scheda_pai.currentPlace == 'chiusa' %} text-danger{% elseif scheda_pai.currentPlace == 'chiusa_con_rinnovo' %} text-orange {% endif %}">{{ scheda_pai.currentPlace }}</td>
                 <td data-title='Operazioni'>
                     <div class="btn-group" role="group">
@@ -91,20 +99,21 @@
                         Apri
                         </button>
                     <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_anagrafica_assistito', {'id': scheda_pai.id}) }}">Visualizza Dati Assi</a></li>
                         <li><a class="dropdown-item" href="{{ path('app_scheda_pai_show', {'id': scheda_pai.id}) }}">Visualizza scheda Pai</a></li>
                         <li><a class="dropdown-item" href="{{ path('app_scheda_pai_edit', {'id': scheda_pai.id}) }}">Modifica scheda Pai</a></li>
                         <li><a class="dropdown-item" href="{{ path('app_scheda_pai_delete', {'id': scheda_pai.id, '_token':  csrf_token('delete' ~ scheda_pai.id) }) }}"onclick="return confirm('Sei sicuro di voler eliminare la scheda?')">Elimina scheda Pai</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'approvata' %}disabled{% endif %}" href="{{ path('app_valutazione_generale_new', {'id_pai': scheda_pai.id})}}">Valutazione Generale</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'approvata' or user.username != scheda_pai.idOperatorePrincipale.username %}disabled{% endif %}" href="{{ path('app_valutazione_generale_new', {'id_pai': scheda_pai.id})}}">Valutazione Generale</a></li>
                         <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_valutazione_figura_professionale_new', {'id_pai': scheda_pai.id})}}">Valutazione Figura Professionale</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_parere_mmg_new', {'id_pai': scheda_pai.id})}}">Parere MMG</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' or user.username != scheda_pai.idOperatorePrincipale.username %}disabled{% endif %}" href="{{ path('app_parere_mmg_new', {'id_pai': scheda_pai.id})}}">Parere MMG</a></li>
                         <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_chiusura_servizio_new', {'id_pai': scheda_pai.id})}}">Chiusura servizio</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_barthel_new', {'id_pai': scheda_pai.id})}}">Barthel</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_form_pai_braden_new', {'id_pai': scheda_pai.id})}}">Braden</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_s_p_m_s_q_new', {'id_pai': scheda_pai.id})}}">SPMSQ</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_tinetti_new', {'id_pai': scheda_pai.id})}}">Tinetti</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_vas_new', {'id_pai': scheda_pai.id})}}">Vas</a></li>
-                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_lesioni_new', {'id_pai': scheda_pai.id})}}">Lesioni</a></li>  
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' and scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_barthel_new', {'id_pai': scheda_pai.id})}}">Barthel</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' and scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_form_pai_braden_new', {'id_pai': scheda_pai.id})}}">Braden</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' and scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_s_p_m_s_q_new', {'id_pai': scheda_pai.id})}}">SPMSQ</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' and scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_tinetti_new', {'id_pai': scheda_pai.id})}}">Tinetti</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' and scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_vas_new', {'id_pai': scheda_pai.id})}}">Vas</a></li>
+                        <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' and scheda_pai.currentPlace != 'in_attesa_di_chiusura' %}disabled{% endif %}" href="{{ path('app_lesioni_new', {'id_pai': scheda_pai.id})}}">Lesioni</a></li>  
                     </ul>
                     </div>
                 </td>
