--- a/templates/scadenzario/index.html.twig
+++ b/templates/scadenzario/index.html.twig
@@ -19,6 +19,12 @@
 						<th>Data Fine</th>
 						<th>Assistito</th>
 						<th>Stato</th>
+						 <th>BAR</th>
+                		<th>BAR</th>
+                		<th>SPMS</th>
+                		<th>TIN</th>
+                		<th>PVA</th>
+                		<th>LES</th>
 						<th>Operazioni</th>
 						<th>Espandi</th>
 					</tr>
@@ -26,6 +32,12 @@
 						<th></th>
 						<th></th>
 						<th></th>
+						<th></th>
+                		<th></th>
+                		<th></th>
+                		<th></th>
+                		<th></th>
+                		<th></th>
 						<th></th>
 						<th></th>
 						<th></th>
@@ -51,6 +63,12 @@
 									{% endfor %}
 								</td>
 								<td data-title='Stato' class="{% if scheda_pai.currentPlace == 'approvata' %} text-pink {% elseif scheda_pai.currentPlace == 'attiva' %} text-success {% elseif scheda_pai.currentPlace == 'nuova' %} text-purple {% elseif scheda_pai.currentPlace == 'in_attesa_di_chiusura' %} text-warning {% elseif scheda_pai.currentPlace == 'chiusa' %} text-danger{% elseif scheda_pai.currentPlace == 'chiusa_con_rinnovo' %} text-orange {% endif %}">{{ scheda_pai.currentPlace }}</td>
+								 <td data-title='BAR' {% if scheda_pai.abilitaBarthel == false %} class ='disabled'> 0 / 0 {% else %}{% if scheda_pai.numeroBarthelAdOggi != scheda_pai.numeroBarthelAdOggiCorretto %} class ='text-danger'{% endif %} >{{scheda_pai.numeroBarthelAdOggi}} / {{scheda_pai.numeroBarthelCorretto}} {% endif %}</td>
+                				<td data-title='BRA'> {% if scheda_pai.abilitaBraden == false %} 0 / 0 {% else %}{{scheda_pai.numeroBradenAdOggi}} / {{scheda_pai.numeroBradenCorretto}} {% endif %}</td>
+                				<td data-title='SPMS'> {% if scheda_pai.abilitaSpmsq == false %} 0 / 0 {% else %}{{scheda_pai.numeroSpmsqAdOggi}} / {{scheda_pai.numeroSpmsqCorretto}} {% endif %}</td>
+                				<td data-title='TIN'> {% if scheda_pai.abilitaTinetti == false %} 0 / 0 {% else %}{{scheda_pai.numeroTinettiAdOggi}} / {{scheda_pai.numeroTinettiCorretto}} {% endif %}</td>
+                				<td data-title='PVA'> {% if scheda_pai.abilitaVas == false %} 0 / 0 {% else %}{{scheda_pai.numeroVasAdOggi}} / {{scheda_pai.numeroVasCorretto}} {% endif %}</td>
+                				<td data-title='LES'> {% if scheda_pai.abilitaLesioni == false %} 0 / 0 {% else %}{{scheda_pai.numeroLesioniAdOggi}} / {{scheda_pai.numeroLesioniCorretto}} {% endif %}</td>
 								<td data-title='Operazioni'>
 									<div class="btn-group" role="group">
 										<button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
