listeners per scale fatti

--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -54,7 +54,7 @@
                 <th>Assistito</th>
                 <th>Stato</th>
                 <th>BAR</th>
-                <th>BAR</th>
+                <th>BRA</th>
                 <th>SPMS</th>
                 <th>TIN</th>
                 <th>PVA</th>
