--- a/templates/vas/index.html.twig
+++ b/templates/vas/index.html.twig
@@ -55,7 +55,7 @@
 </div>
 
     
-    <a class="btn btn-primary" href="{{ path('app_homepage') }}">Menù Principale</a>
+    <a class="btn btn-primary" href="{{ path('app_scadenzario_index') }}">Menù Principale</a>
 
 <nav aria-label="Page navigation example">
    <ul class="pagination justify-content-center">
