--- a/templates/scadenzario/index.html.twig
+++ b/templates/scadenzario/index.html.twig
@@ -19,8 +19,8 @@
 						<th>Data Fine</th>
 						<th>Assistito</th>
 						<th>Stato</th>
-						 <th>BAR</th>
-                		<th>BAR</th>
+						<th>BAR</th>
+                		<th>BRA</th>
                 		<th>SPMS</th>
                 		<th>TIN</th>
                 		<th>PVA</th>
